# unicode_converter

./: README.md  Unicode Converter Comparison.md
boost/convert_func/: CMakelists.txt
boost/convert_func/src/: converter.cpp  sample.cpp
boost/gbk_utf_sample/: CMakeLists.txt  utf_gbk_sample.cpp
boost/gbk_utf_sample/convenient/: CMakeLists.txt  convenient_sample.cpp
boost/gbk_utf_sample/dynamic_lib/: CMakeLists.txt
boost/gbk_utf_sample/dynamic_lib/dynamic_boost/: CMakeLists.txt  README.md
boost/gbk_utf_sample/dynamic_lib/dynamic_boost/lib/: CMakeLists.txt
boost/gbk_utf_sample/dynamic_lib/lib/include/: converter.hpp
boost/gbk_utf_sample/dynamic_lib/lib/src/: converter.cpp
boost/gbk_utf_sample/dynamic_lib/src/: utf_gbk_sample.cpp
boost/gbk_utf_sample/dynamic_lib/static_boost/: CMakeLists.txt  CMakeSettings.json  README.md
boost/gbk_utf_sample/dynamic_lib/static_boost/lib/: CMakeLists.txt
boost/gbk_utf_sample/dynamic_lib/static_boost/lib/src/: converter.cpp
boost/gbk_utf_sample/dynamic_lib/static_boost/src/: CMakeLists.txt
boost/gbk_utf_sample/header_only/lib/: CMakeLists.txt
boost/gbk_utf_sample/lib/: converter.cpp
boost/gbk_utf_sample/lib/include/: converter.hpp
boost/gbk_utf_sample/src/: CMakeLists.txt  utf_gbk_sample.cpp
boost/locale_test/: Boost Unicode Lib.md
boost/locale_test/cmakeTest/: .CMakeLists.txt.swp  CMakeLists.txt  calendar.cpp  collate.cpp  conversions.cpp  hello.cpp
boost/locale_test/vstest/test/: main.cpp  test.vcxproj
boost/locale_test/vstest/test/Debug/: test.exe.recipe  test.ilk
boost/locale_test/vstest/test/Debug/test.tlog/: CL.write.1.tlog  link.read.1.tlog  test.write.1u.tlog
boost/test/cmakeTest/: CMakeLists.txt  boost_utility.cpp  boundary.cpp
boost/test/vstest/test/: test.sln
boost/test/vstest/test/Debug/: test.vcxproj.FileListAbsolute.txt  vc142.idb
boost/test/vstest/test/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.write.1.tlog  test.lastbuildstate
libicu/convert_func/: CMakeLists.txt
libicu/convert_func/include/: converter.hpp
libicu/convert_func/src/: CMakeLists.txt  sample.cpp
libicu/convert_func/tests/: CMakeLists.txt
libicu/icu_test/cmaketest/: CMakeLists.txt  main.cpp
libicu/icu_test/vstest/: main.cpp  test.vcxproj
libicu/icu_test/vstest/Debug/: test.ilk
libicu/icu_test/vstest/Debug/test.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.write.1.tlog
libicu/test/cmaketest/: CMakeLists.txt
libicu/test/vstest/: test.sln
libicu/test/vstest/Debug/: test.exe.recipe  test.vcxproj.FileListAbsolute.txt  vc142.idb
libicu/test/vstest/Debug/test.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  test.lastbuildstate  test.write.1u.tlog
